--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section 2>
             
             <h2> Au secours! </h2> 
+            <p>Dans un paisible village, Kakakoro, un chaton espiègle et curieux, se retrouve un jour face à un sac mystérieux abandonné sur le bord de la route.</p>
             
             <a href="mystere.html" class="lien-suivant">Histoire de kakakoro</a> 
 
